# HTN_CKi

./: .gitignore.txt  sdkconfig  sdkconfig.old
components/acs712/: CmakeLists.txt  acs712.c
components/acs712/include/: acs712.h
components/esp32-dht11/: CMakeLists.txt
components/i2c_lcd/: CMakeLists.txt  i2c_lcd.c
components/i2c_lcd/include/: i2c_lcd.h
main/: CMakeLists.txt  app_main.c  idf_component.yml
